# GEHD

./: .gitignore  .gitmodules  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_model.sh  setup.py  testing_solutions.ipynb
main_model/: README.md  config.yaml  config_decoder.yaml  requirements.txt
main_model/configs/: config_decoder.yaml  config_encoder.yaml  config_problem_generation.yaml
main_model/src/: main.py  main_decoder.py  test.py  wandbsync.py
main_model/src/architecture/: decoder_architecture.py  decoder_architecture_bu.py  decoder_architecture_sw.py  encoder_architecture.py
main_model/src/data/: decoder_datahandler.py  decoder_dataloader.py  encoder_dataloader.py  generate_meshes.py  generate_object_data.py  generate_problem_data.py  generate_problem_data_var_depots.py
main_model/src/figures/: plot_percentages.ipynb  visualize_meshes_polyscope.py
main_model/src/figures/scripts/: geodesics.py  manifold_edge.py  manifold_vertex.py  pooling.py
main_model/src/notebooks/: convert_problem_data.py  convert_problem_data_3d.py  testing_decoder_trainer.ipynb  testing_meshes.ipynb
main_model/src/plots/: plot_losses_dec.ipynb  plot_losses_enc.ipynb  plot_percentages.ipynb
main_model/src/trainer/: base_trainer.py  decoder_trainer.py  encoder_trainer.py
main_model/src/utils/: config.py  general_utils.py  lr_scheduler.py  tracker.py
main_model/src/visualization/: visualize_embeddings.py  visualize_meshes.py  visualize_solutions.py
manifold_learning/: .gitignore  README.md  all_results.pkl  config.yaml  pyproject.toml  requirements.txt  run_tests.sh
manifold_learning/src/: utils.py
manifold_learning/src/data/: generate_data.py
manifold_learning/src/exploration/: dim_comparison.py  generate_data.ipynb  packup_pacmap.py  persistent_homology.ipynb  triangles.ipynb
manifold_learning/src/manifold_learning/: generate_manifolds.py  pacmap_child.py  process_manifolds.py  visualize_manifolds.py
manifold_learning/tests/data/: test_generate_data.py  test_visualize_data.py
src/: utils.py
src/data/: generate_data.py  visualize_data.py
src/exploration/: dim_comparison.py
src/manifold_learning/: generate_manifolds.py
tests/data/: test_visualize_data.py
(+12 files in other folders)
