[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis_dgerber"
version = "0.1.0"
description = "A package for my project"
authors = [{name = "Damian Gerber", email = "dagerber@mit.edu"}]
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.7.1",
    "numpy==1.23.5",
    "PyMCubes==0.1.2",
    "scikit_learn==1.1.3",
    "tqdm==4.65.0",
    "websockets==10.3",
    "tensorboard==2.17.0",
    "pygeodesic==0.1.9",
    "trimesh==4.6.4",
    "yacs==0.1.8",
    "polyscope==2.3.0",
    "pyglet==1.5.31",
    "torch",
    "torch-cluster",
    "torch-geometric",
    "torch-scatter",
    "wandb",
    "h5py==3.13.0",
    "pyvrp==0.10.0"
]

[tool.setuptools]
packages = ["manifold_learning", "main_model"]

