[tool.poetry]
name = "thesis_dgerber"
version = "0.1.0"
description = "Master Thesis Project"
authors = ["Damian Gerber"]
readme = "README.md"  # Or the path to your README file

# Specify the packages, including their source directory
packages = [
    { include = "data", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.9"  # Or your desired Python version compatibility
pytest = "7.4.4"
pytest-cov = "4.1.0"
pytest-flake8 = "1.3.0"
pytest-html = "3.1.1"

# ... add any other dependencies your project requires

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
